force-app/main/default/objects/Entity__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique code within this system to identify the Entity across Salesforce instances and external data sources.</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>