force-app/main/default/objects/Entity__c/fields/HierarchySort__c.field-meta.xml
<CustomField>
    <fullName>HierarchySort__c</fullName>
    <label>Hierarchy Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>