force-app/main/default/objects/Entity__c/fields/LineDisplay__c.field-meta.xml
<CustomField>
    <fullName>LineDisplay__c</fullName>
    <label>Line Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>