force-app/main/default/objects/Entity__c/fields/ParentEntity__c.field-meta.xml
<CustomField>
    <fullName>ParentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Subordinate Entities</relationshipLabel>
    <relationshipName>Entitites</relationshipName>
    <type>Lookup</type>
</CustomField>