force-app/main/default/objects/Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ParentEntity__c</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Account__c</columns>
    <columns>Level__c</columns>
    <columns>HierarchySort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>