force-app/main/default/objects/Entity__c/listViews/EntitiesHierarchyView.listView-meta.xml
<ListView>
    <fullName>EntitiesHierarchyView</fullName>
    <columns>LineDisplay__c</columns>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>ParentEntity__c</columns>
    <columns>Account__c</columns>
    <columns>Level__c</columns>
    <columns>HierarchySort__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hierarchy View</label>
</ListView>